--- a/glide.yaml
+++ b/glide.yaml
@@ -27,3 +27,8 @@ import:
   subpackages:
   - ssh
 - package: golang.org/x/oauth2
+- package: github.com/olekukonko/tablewriter
+- package: github.com/mattn/go-runewidth
+  version: ^0.0.2
+- package: github.com/lextoumbourou/goodhosts
+  version: ^2.1.0
